WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51911
GTK: AX: DRT needs to use correct root object method.
https://bugs.webkit.org/show_bug.cgi?id=51911
Summary
GTK: AX: DRT needs to use correct root object method.
chris fleizach
Reported
2011-01-04 18:07:24 PST
GTK needs to get the correct accessibility root object by using axObjectCache() root object.
Attachments
Patch
(3.93 KB, patch)
2011-01-04 18:10 PST
,
chris fleizach
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2011-01-04 18:10:44 PST
Created
attachment 77958
[details]
Patch
chris fleizach
Comment 2
2011-01-04 18:11:31 PST
we can also use this bug to address the fact that DRT is crashing a lot now. I need some help figuring out what's going on there, since I can't see the crash logs.
Martin Robinson
Comment 3
2011-01-04 18:36:29 PST
Here are the crash logs for the GTK+ bots:
http://webkit-bots.igalia.com/
chris fleizach
Comment 4
2011-01-04 23:56:12 PST
looks like i fixed the layout test crashing. i suspect the API tests may still fail, don't know if I can fix those on my own
Martin Robinson
Comment 5
2011-01-05 00:14:24 PST
Comment on
attachment 77958
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=77958&action=review
Thanks for the fix!
> Tools/DumpRenderTree/gtk/AccessibilityControllerGtk.cpp:63 > + AtkObject* accessible = DumpRenderTreeSupportGtk::getRootAccessibleElement(mainFrame);
There's an extra space here after =.
chris fleizach
Comment 6
2011-01-05 09:31:58 PST
http://trac.webkit.org/changeset/75072
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug