GTK: AX: DRT needs to use correct root object method. https://bugs.webkit.org/show_bug.cgi?id=51911

Reviewed by Martin Robinson.

Tools:

* DumpRenderTree/gtk/AccessibilityControllerGtk.cpp:
(AccessibilityController::rootElement):

WebKit/gtk:

* WebCoreSupport/DumpRenderTreeSupportGtk.cpp:
(DumpRenderTreeSupportGtk::getRootAccessibleElement):
(DumpRenderTreeSupportGtk::getFocusedAccessibleElement):
* WebCoreSupport/DumpRenderTreeSupportGtk.h:



Canonical link: https://commits.webkit.org/65397@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75072 268f45cc-cd09-0410-ab3c-d52691b4dbfc